--- a/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -84,7 +84,7 @@
 
 \chapter{Conclusion}
 \label{chap:conclusion}
-%conclusion mangler
+fxfatal{mangler conc}
 
 %%%% Kilder %%%%
 
@@ -108,7 +108,6 @@
 
 
 %%%% Appendiks %%%%
-\input{appendix/GroupContract.tex}
 \input{appendix/mindmap.tex}
 
 %%%% Bilag %%%%
