--- a/trunk/LaTeX/Rapport - NIX PILLE/formalia/forside.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/formalia/forside.tex
@@ -13,7 +13,7 @@
 \rule{13cm}{3mm} \\ \vspace{1.5cm}
 \vspace{1cm}
 
-%\includegraphics[width=0.9\textwidth]{billeder/forside.jpg}
+\includegraphics[width=0.9\textwidth]{billeder/forside.jpg}
 
 \vspace{2cm} 
 \textsc{\Large Bag Packer Program \\
