--- a/trunk/LaTeX/Rapport - NIX PILLE/formalia/titelblad.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/formalia/titelblad.tex
@@ -66,7 +66,7 @@ Karsten Jahn\\
 \end{description}
 }
 \begin{description}
-%\item { Total number of pages:} \pageref{VeryLastPage}
+\item { Total number of pages: } \pageref{VeryLastPage}
 \item { Finished: } 2012
 \end{description}
 \vfill } &
@@ -84,10 +84,10 @@ Karsten Jahn\\
 \end{tabular}}
 \\ \\
 
-%\begin{description}
-%\item { Source of front page picture:}\\
-%http://www.frederiksberg.dk/Borgerservice/PasOgKoerekort/Pas.aspx\\
-%\end{description}
+\begin{description}
+\item { Front Page image:}\\
+Stuart Miles / FreeDigitalPhotos.net
+\end{description}
 
 \noindent{\footnotesize\emph{The content of the report is freely available, but can only be published (with source reference) with an agreement with the authors.}}
 \end{nopagebreak}
