--- a/LaTeX/Rapport - NIX PILLE/indhold/development/ThePackingAlgorithmCode.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/development/ThePackingAlgorithmCode.tex
@@ -21,7 +21,7 @@ The luggage class and the luggage\_item class is used in the program with a list
 \subsection{Description of the Code}
 The algorithm to pack has been developed from the flowchart seen on figure \ref{fig:flowalgo}. The following will describe the code and the extensions of the flowchart.
 \subsubsection{Reset and Sorting}
-As seen on the figure, the first thing which is done is to sort the suitcases and the items. Before sorting the lists of suitcases and luggages, it resets the values which were changed when packing. This is to ensure the algorithm has the right values when running it twice. The reset methods for the items and the suitcases are in their respective classes as seen on Figure \ref{fig:lugclass} and Figure \ref{fig:lugitemclass}. A loop will call the reset methods in all suitcases and items in the lists. This is for example to reset the values of where there are saved items in the luggage. The items and luggage is also rotated so the luggage has the longest side as width as seen on Listing \ref{lst:RotateLug}. This is done, so the algorithm packs as optimal as possible. The items is likewise rotated, so the height is the smallest side. This will ensure that the algorithm will try to pack items lying, and not upright.
+As seen on the figure, the first thing which is done is to sort the suitcases and the items. Before sorting the lists of suitcases and luggages, it resets the values which were changed when packing. This is to ensure the algorithm has the right values when running it twice. The reset methods for the items and the suitcases are in their respective classes as seen on Figure \ref{fig:lugclass} and Figure \ref{fig:lugitemclass}. A loop will call the reset methods in all suitcases and items in the lists. This is for example to reset the values of where there are saved items in the luggage. The items and luggage is also rotated so the luggage has the longest side as width as seen on Listing \ref{lst:lugrotate}. This is done, so the algorithm packs as optimal as possible. The items is likewise rotated, so the height is the smallest side. This will ensure that the algorithm will try to pack items lying, and not upright.
 \kode{The code to rotate the luggage until the longest side is the width. The rotation is made by switching the values of 2 sides. (From the luggage class in the Main form.)}{lugrotate}{RotateLug.txt}
 The method to sort the luggages and items will sort them by size, so the largest items will be attempted to be packed first in the biggest suitcases. This will give a better packing, because the smallest items are easier to fit than the big items.
 \subsubsection{Weight Distribution}
