--- a/LaTeX/Rapport - NIX PILLE/formalia/titelblad.tex
+++ b/LaTeX/Rapport - NIX PILLE/formalia/titelblad.tex
@@ -23,14 +23,15 @@
 {\samepage 
 \begin{tabular}{r}
 \parbox{\textwidth}{  \raisebox{11mm}{\includegraphics[height=1cm]{billeder/aaulogo.jpg}}
-\hfill \parbox{8cm}{\begin{tabular}{l}
+%\hfill
+\parbox{8cm}{\begin{tabular}{l}
 {\small \textbf{Faculty Office for Engineering and Science }}\\
 {\small Strandvejen 12-14} \\
 {\small Phone 96 35 97 31} \\
 {\small Fax 98 13 63 93} \\
 {\small http://tnb.aau.dk}
 \end{tabular}}}
-\\
+
 \end{tabular}
 
 \begin{tabular}{cc}
@@ -66,13 +67,13 @@ Karsten Jahn\\
 \end{description}
 }
 \begin{description}
-\item { Total number of pages: } \pageref{VeryLastPage}
+%\item { Total number of pages: } \pageref{VeryLastPage}
 \item { Finished: } 2012
 \end{description}
 \vfill } &
 \parbox{7cm}{
   \vspace{.15cm}
-  \hfill 
+  %\hfill 
   \begin{tabular}{l}
   { Synopsis:}\bigskip \\
   \fbox{
