--- a/LaTeX/Rapport - NIX PILLE/indhold/discussion/Perspectivation.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/discussion/Perspectivation.tex
@@ -1,4 +1,4 @@
-\subsection{Perspectivation}
+\section{Perspectivation}
 When working with problem solving it is also important to look at how the user will use and interact with the solution. Through these assumptions a better solution can be formed that is more user friendly. Therefore it is a good thing to know who are going to use the solution, and from that design it more thoughtfully.
 
 The purpose in this project was to make a program that provided the user with a packing solution and help the users to pack a suitcase more effectively. The program should also control that the weight of the suitcase does not exceed the limits given by the user. The program is made in "Visual Studio" that provides the developer with a lot of good tools to make an user interface for the user of the program.
