--- a/trunk/LaTeX/Rapport - NIX PILLE/formalia/titelblad.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/formalia/titelblad.tex
@@ -23,7 +23,7 @@
 {\samepage 
 \begin{tabular}{r}
 \parbox{\textwidth}{  \raisebox{11mm}{\includegraphics[height=1cm]{billeder/aaulogo.jpg}}
-%\hfill
+\hfill
 \parbox{8cm}{\begin{tabular}{l}
 {\small \textbf{Faculty Office for Engineering and Science }}\\
 {\small Strandvejen 12-14} \\
