--- a/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -69,6 +69,7 @@
 \input{indhold/development/HowTheProgramHandlesForms.tex}
 \input{indhold/development/ThePackingAlgorithmCode.tex}
 \input{indhold/development/ColorGiver.tex}
+\input{indhold/development/HowTheProgramHandles3D.tex}
 \input{indhold/development/FunctionDrawCubes.tex}
 \input{indhold/development/FunctionRotateWithMouse.tex}
 \input{indhold/development/FileSerializerFunction.tex}
