--- a/LaTeX/Undervejs/FileSerializerFunction.tex
+++ b/LaTeX/Undervejs/FileSerializerFunction.tex
@@ -1,4 +1,8 @@
 \section{File Serialize function}
+for saving data in the program for when the program is close there is not use SQL databases because there is 
+
+
+
 To save the data in the program a function in C\# called File Serialize is used. The function is called when the data from the program should be saved or loaded. The function lies in the file "FileSerializer.cs", which is taken from the website "www.codeproject.com" from the "how to" "Custom Serialization Example" section. The next part of the function, is where the list of items and the luggages are loaded in the main part. 
 \kode{Informs that there is saved to a file}{FileSerializer1}{FileSerializer1.txt}
 Here it can be seen that the "File Serializer" needs some data descriptions to turn the information from the item list into a data file. 
