--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/ThePackingAlgorithmCode.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/ThePackingAlgorithmCode.tex
@@ -34,7 +34,7 @@ If the item cannot be fitted in the point in the luggage, the item will be rotat
 \subsubsection{Placing the item}
 If the item could not be packed in any suitcase, it will be added to a list of not packed items, which will be printed to the user later on. It will then be removed from the packing list, and the next item will be packed. If the item could be packed, it will try to move it lower in the suitcase until it meets another item in the check\_for\_space\_z in the luggage class. This will ensure an optimal packing. The item will then be packed in the suitcase by adding 1 to the value in every point the item will fill out in the suitcase, using the place\_item method in the luggage class. The packing points is saved to the item, so it have the information of, where it is saved. This is done by the function save\_item from the luggage\_item class. The corners of the item is added to the list of packing points, and the list is sorted. The item is now saved and the next item can be packed.
 \subsubsection{When Every Item is Packed}
-When all items have been packed (or placed in the list of not packed items), the next step in the algorithm is to generate the colors each item should be displayed with in the 3D Viewer. This code can be seen in section \fxfatal{ret section}.
+When all items have been packed (or placed in the list of not packed items), the next step in the algorithm is to generate the colors each item should be displayed with in the 3D Viewer. This code can be seen in section \ref{sec:3DHandler}.
 The algorithm will at the end check if there has been a mistake during packing, so one of the values in the luggage has exceeded 1. If it has, it will throw an exception. It will then check, if some of the items could not be packed. This will show an error message to the user, with the information of which elements which could not be packed as seen on Listing \ref{lst:CheckForError}.
 \kode{The code will return an error message to the user if some items could not be packed (from the method check\_error\_after\_packing in the form Main)}{CheckForError}{ErrorMessage.txt}
 
