--- a/LaTeX/Rapport - NIX PILLE/indhold/development/HowTheProgramHandles3D.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/development/HowTheProgramHandles3D.tex
@@ -1,5 +1,5 @@
 \section{How the Program Handles 3D}
-\label{3DHandler}
+\label{sec:3DHandler}
 The 3D in this program is handled by objects called Shape3D. A Shape3D object contains an array of Polygons objects. A Polygon object contains an array of Vector objects and a Pen. A Vector object contains three integers: x, y and z, which are the coordinates of the Vector. 
 
 \subsection{Shape3D Class}
