--- a/LaTeX/BibTeX/sources.bib
+++ b/LaTeX/BibTeX/sources.bib
@@ -36,6 +36,21 @@
   url = {http://www.takeoff.dk/news/22548}
 }
 
+@MISC{nphardnist,
+  author = {Paul E. Black},
+  title = {NP-hard},
+  howpublished = {website},
+  month = {October},
+  year = {2010},
+  note = {Algorithms and Theory of Computation Handbook, CRC Press LLC, 1999,
+	"NP-hard", in Dictionary of Algorithms and Data Structures [online],
+	Paul E. Black, ed., U.S. National Institute of Standards and Technology.
+	25 October 2010. (accessed TODAY) Available from: http://www.nist.gov/dads/HTML/nphard.html},
+  owner = {lewindows},
+  timestamp = {2012.05.09},
+  url = {http://xlinux.nist.gov/dads/HTML/nphard.html}
+}
+
 @MISC{newrules,
   author = {Crete-Kreta},
   title = {New rules for hand luggage at all EU airports},
