--- a/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -110,7 +110,7 @@ fxfatal{mangler conc}
 
 %%%% Appendiks %%%%
 \input{appendix/mindmap.tex}
-
+\input{appendix/forslag.tex}
 %%%% Bilag %%%%
 
 \end{document}
