--- a/LaTeX/Rapport - NIX PILLE/indhold/problem/thesisstatement.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/problem/thesisstatement.tex
@@ -1,5 +1,6 @@
-\section{Thesis Statement}
-In this section a thesis statement will be formulated which will be used to develop a method to the problem of this project and to get a more precise problem to work with. The method is used to try and solve the problem stated in the thesis statement.\\
+\section{Problem Statement}
+\label{sec:thesis}
+In this section a problem statement will be formulated which will be used to develop a method to the problem of this project and to get a more precise problem to work with. The method is used to try and solve the problem stated in the thesis statement.\\
 The problem analyses shows that there are two general types of programs on the market. One type is a form of a packing list that tells the user what they might want to pack, the other type of program is a packing program which packs containers for the user and calculates the shipping cost to a designated location. These two types of programs only fulfill parts of the criteria this project have put forward. With this in mind a thesis statement have been formulated to help shape the solution for this projects problem.
 
 \begin{itemize}
