--- a/LaTeX/Klar til at blive rettet af andre/BinPackingProblem.tex
+++ b/LaTeX/Klar til at blive rettet af andre/BinPackingProblem.tex
@@ -44,6 +44,6 @@ It seems that it is more effective to sort the lists before attempting to pack o
 
 %% Ret start %%
 
-The main difference between the knapsack problem \fxfatal{knapsack section} and the bin packing problem, is that with the knapsack problem a list of items, each with a weight and a value, one must fit these into a fixed-size knapsack, so that the combined weight of the items are as low as possible, where the combined values must be as high as possible. In the bin packing problem, a list of items, each with given dimensions, each item must be packed into bins of a given capacity, so that a minimal number of bins are used.
+The main difference between the knapsack problem \fxfatal{knapsack section} and the bin packing problem, is that with the knapsack problem a list of items, each with a weight and a value, one must fit these into a fixed-size knapsack, so that the combined weight of the items are as low as possible, where the combined values must be as high as possible. In the bin packing problem, a list of items, each with given dimensions, each item must be packed into bins of a given capacity, so that a minimal number of bins are used. In this project we focus on the bin packing problem, because our goal is to pack items with given dimensions, into suitcases (bins), of a given size. In other words, each item does not have a specific value - each item must be packed, which is why we chose the bin packing problem over the knapsack problem. 
 
 %%Ret end %%
