--- a/LaTeX/Rapport - NIX PILLE/indhold/development/FunctionDrawCubes.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/development/FunctionDrawCubes.tex
@@ -1,4 +1,5 @@
 \section{Function to draw cubes}
+\label{sec:cube}
 The function called "DrawSomething" is the function which basically converts dimensions and coordinates into the vectors that are to be drawn.
 "DrawSomething" takes 11 input parameters. Simply put, these inputs are the dimensions and coordinates of the cube to be drawn represented as floats. Next the function takes 3 integers which are: The number of the suitcase, the item to be drawn lies in, the factor of zoom that should be applied to the item, and the index of the array of polygons that has currently been reached. Lastly, the function takes a Vector and a Pen as input.
 
