--- a/LaTeX/Rapport - NIX PILLE/formalia/forside.tex
+++ b/LaTeX/Rapport - NIX PILLE/formalia/forside.tex
@@ -8,7 +8,7 @@
 
 \phantom{hul}
 
-\textsl{P1 Project} \\ \vspace{1cm}
+\textsl{P2 Project} \\ \vspace{1cm}
 
 \rule{13cm}{3mm} \\ \vspace{1.5cm}
 \vspace{1cm}
@@ -17,7 +17,7 @@
 
 \vspace{2cm} 
 \textsc{\Large Bag Packer Program \\
-Statusseminar\\
+P2 project\\
 Group B130\\
 Software\\
 Department of Computer Science\\
