--- a/LaTeX/Rapport - NIX PILLE/formalia/titelblad.tex
+++ b/LaTeX/Rapport - NIX PILLE/formalia/titelblad.tex
@@ -70,12 +70,13 @@ Karsten Jahn\\
 %\item { Total number of pages: } \pageref{VeryLastPage}
 \item { Finished: } The 24th of May 2012
 \end{description}
+
 \vfill } &
 \parbox{7cm}{
   \vspace{.15cm}
-  %\hfill 
+  \hfill \\ \\
   \begin{tabular}{l}
-  { Synopsis:}\bigskip \\
+  { Synopsis:}\\%\bigskip 
   \fbox{
     \parbox{6.5cm}{\bigskip
      {\vfill{\small \input{formalia/synopsis}
