--- a/LaTeX/Undervejs/Specificationrequirement.tex
+++ b/LaTeX/Undervejs/Specificationrequirement.tex
@@ -1,6 +1,6 @@
 \section{Specification Requirements}
 \label{sec:Spec}
-Through the problem analysis (see chapter \ref{chap:problem} it has been documented that there are some strict rules regarding some forms of public transportation when going on vacation \fxfatal{missing section reference}. Based on this research a list of features has been composed, which the program must fulfill to meet the base requirements \fxfatal{missing section reference}. Furthermore another list has also been made composed of some additional features that would make the program better and more user friendly. They are not needed for the base requirements, but rather as improvements to make the program even more ideal for the user.
+Through the problem analysis (see chapter \ref{chap:problem} it has been documented that there are some strict rules regarding some forms of public transportation when going on vacation \fxfatal{missing section reference}. Based on this research a list of features has been composed, which the program must fulfil to meet the base requirements \fxfatal{missing section reference}. Furthermore another list has also been made composed of some additional features that would make the program better and more user friendly. They are not needed for the base requirements, but rather as improvements to make the program even more ideal for the user.
 
 Since using a new program sometimes can be hard, it is necessarily to have a guide or some instructions to the user to help him/her using the program the way it was designed. The guide should be short and well formulated so the user with ease can understand what to do in the program. 
 The project description \fxfatal{missing section reference}states that the program must be written in C\#, and therefore the program are written using this language. 
