--- a/LaTeX/Klar - Anden gang rettelse/sketchdescription.tex
+++ b/LaTeX/Klar - Anden gang rettelse/sketchdescription.tex
@@ -53,4 +53,4 @@ Figure \ref{fig:skitse7bdone} is the second suggestion on how the window should 
 
 \figur{1.0}{8.skitse.jpg}{Sketch of the message box that will show when the items has been packed}{fig:skitse8}
 
-The message box seen on figure \ref{fig:skitse8} will show when all the items has been packed. The "Pack again"-button will show where to put all the things again. The "Make new list" will return the user to the main window where he/she can start making a new list, load a saved list or manage the already saved list. 
+The message box seen on figure \ref{fig:skitse8} will show when all the items has been packed. The "Pack again"-button will show where to put all the things again. The "Make new list" will return the user to the main window where he/she can start making a new list, load a saved list or manage the already saved list. Most of the sketches do not look like the program what so ever, this is because the sketches where made before the program, and when the program was developed, the GUI was adapted to be more logical.
