--- a/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -109,8 +109,9 @@ fxfatal{mangler conc}
 
 
 %%%% Appendiks %%%%
-\input{appendix/mindmap.tex}
 \input{appendix/forslag.tex}
+\input{appendix/mindmap.tex}
+\input{appendix/Questionnaire.tex}
 %%%% Bilag %%%%
 
 \end{document}
